@@ -132,6 +132,8 @@
       <fileset refid="misc"/>
     </copy>
     
+    <copy file="buildscripts/classtree/DWExtensionReadme.txt" tofile="${build.src.dir}/editors/Dreamweaver/readme.txt" />
+    
     <echo>Changing file permissions...</echo>
     <chmod mode="0777">
       <fileset refid="writables" />
@@ -221,7 +223,30 @@
       <fileset dir="${build.doc.dir}/manual/HTMLSmartyConverter">
         <include name="**/**" />
       </fileset>
-    </move>    
+    </move>
+    
+    <echo>
+    
+
+                   Distribution Not Completed Yet!!!
+                   
+The following steps need to be manually performed in order to complete
+the PRADO distribution:
+
+1. Package DreamWeaver extension by running DW extension manager with
+   buildscripts/classtree/PRADO.mxi and saving the generated file as
+   "${build.src.dir}/editors/Dreamweaver/PRADO.mxp"
+   
+2. If building on Linux, the CHM doc file needs to be generated by compiling 
+   "${build.doc.dir}/manual/CHMdefaultConverter/phpdoc.hhp"
+   and saving the generated file as 
+   "${build.src.dir}/docs/manual.chm"
+
+3. Use winzip (on Windows) and gzip (on Linux) to generate the compressed
+   release files of the direcotry 
+   "${build.src.dir}".
+
+    </echo>
   </target>
 
   <target name="js" description="Compiling Javascript distribution files">
