@@ -59,6 +59,13 @@ The installation is done! You will see the following subdirectories,
   <li><a href="demos/personal/index.php">Personal Website</a> (incomplete)</li>
 </ul>
 
+<h2>Editor Support</h2>
+<p>
+A Macromedia Dreamweaver extension can be found under <b>editors/Dreamweaver</b>.
+This extension contains a tag library that enables Dreamweaver to auto-complete 
+PRADO component tags when you use it to edit PRADO templates.
+</p>
+
 <h2>Documentation</h2>
 <ul>
 <li><a href="docs/manual/index.html">API documentation</a></li>
@@ -97,6 +104,7 @@ The installation is done! You will see the following subdirectories,
 
 <h3>Special Credits To</h3>
 <ul>
+<li>Stanislav Yordanov - the script of generating Dreameweaver extension for PRADO</li>
 <li>All PRADO users - great suggestions, feedback and support</li>
 <li>ASP.NET 2.0 for its great inspiration and reference</li>
 <li>All <a href="framework/3rdParty/readme.html">third-party work</a> used in PRADO</li>
@@ -104,47 +112,39 @@ The installation is done! You will see the following subdirectories,
 
 
 <h2>License</h2>
-<p>PRADO is free software released under the terms of the following BSD license.
+<p>
+The PRADO framework and the included demos are freeware. They are released under 
+the terms of the following BSD License.
 </p>
-<p>Copyright &copy; 2004-2006, PradoSoft (http://www.pradosoft.com)<br/>
+<p>
+Copyright 2004-2006 by The PRADO Group (http://www.pradosoft.com)<br/>
 All rights reserved.
 </p>
 <p>
-Redistribution and use in source and binary forms,
-with or without modification, are permitted provided
-that the following conditions are met:
-<ul>
-<li>Redistributions of source code must retain the above
-  copyright notice, this list of conditions and the
-  following disclaimer. </li>
-
-<li>Redistributions in binary form must reproduce
-  the above copyright notice, this list of conditions
-  and the following disclaimer in the documentation
-  and/or other materials provided with the distribution.</li>
-
-<li>Neither the name of the developer nor the names of
-  its contributors may be used to endorse or promote
-  products derived from this software without specific
-  prior written permission. </li>
-</ul>
+Redistribution and use in source and binary forms, with or without modification, 
+are permitted provided that the following conditions are met:
 </p>
+<ul>
+<li>Redistributions of source code must retain the above copyright notice, this 
+list of conditions and the following disclaimer. </li>
+<li>Redistributions in binary form must reproduce the above copyright notice, 
+this list of conditions and the following disclaimer in the documentation and/or 
+other materials provided with the distribution.</li>
+<li>Neither the name of the PRADO Group nor the names of its contributors may be 
+used to endorse or promote products derived from this software without specific 
+prior written permission.</li>
+</ul>
 <p>
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS
-AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED
-WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
-PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
-THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY
-DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF
-USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
-HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
-IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
-THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-POSSIBILITY OF SUCH DAMAGE.
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
+ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED 
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. 
+IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, 
+INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, 
+OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, 
+WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) 
+ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY 
+OF SUCH DAMAGE.
 </p>
 </body>
 </html>
